<resources>
    <string name="app_name">Kieszonkowy sanitariusz</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">Aplikacja mająca na celu dostarczenia informacji na
        temat przeprowadzenia wstępnej diagnostyki i udzielania pierwszej pomocy w sytuacjach
        mogących zagrażać życiu lub zdrowiu </string>
    <string name="prepare_report_button">Prepare Report</string>
    <string name="incidents_list_button">Incidents List</string>
    <string name="przyczyna_podejrzenie">Przyczyna/Podejrzenie</string>
    <string name="objawy_uwagi">Objawy / Uwagi:</string>
    <string name="utrata_przytomnosci">Utrata przytomności?</string>
    <string name="zatrzymanie_krazenia">Zatrzymanie akcji serca?</string>
    <string name="zapisz">Zapisz</string>
    <string name="wczytaj">Wczytaj</string>
    <string name="czas_zatrzymania">Zatrzymanie przez jaki czas? (min)</string>
    <string name="przyjmuje_leki_jakie">Czy przyjmuje leki? Jakie?</string>
    <string name="alergie">Alergie i uczulenia? Jakie?</string>
    <string name="uwagi">Dodatkowe uwagi:</string>
    <string name="dodatkowe_urazy">Dodatkowe urazy:</string>
</resources>
